--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Virnesh-Developers/assets/css/style.css?v=f3e6f951feb0a055942cf1cb01c8dfb058c4e137">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://github.com/amunesh/Virnesh.com/blob/main/stylesheet.css">
 
 
 <title>Privacy Policy</title>
